# hfcf

./: .gitignore  Makefile  README  client.py  generate_autostart.sh  invoke.c  pyproject.toml  run.py  server.py
modules/: Test  este  read QR code  tESt  test
modules/read QR code dir/: pyproject.toml  run.py
