[tool.poetry]
name = "read qr code dir"
version = "0.1.0"
description = ""
authors = ["megahomyak <g.megahomyak@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pyperclip = "^1.9.0"
pillow = "^11.0.0"
pyzbar = "^0.1.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
